# python

./: 20250207test1.py  P3383.py  README.md  Untitled.ipynb  test1mod.py  test2.py
ML/: Untitled.ipynb  (+1 more)
OpenCV/Homework/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  runs_log.csv  start_server.sh  test.ipynb  test_pipeline.py  方法论.docx
OpenCV/Homework/app/: __init__.py  config.py  main.py
OpenCV/Homework/app/api/: ml_routes.py  routes.py
OpenCV/Homework/app/core/: decode.py  detect.py  exceptions.py  lbp.py  logging.py  metrics.py  pipeline.py  postprocess.py  preprocess.py  segment.py  validators.py  viz.py
OpenCV/Homework/app/ml/: __init__.py  click_segment.py  data_generator.py  feature_extractor.py  predictor.py  trainer.py
OpenCV/Homework/app/ml/models/: README.md
OpenCV/Homework/app/ml/models/training_data/: README.md
OpenCV/Homework/docs/: BLACK_BORDER_FIX.md  CLICK_COORDINATE_FIX.md  CLICK_IMPROVEMENT_COMPARISON.md  CLICK_SEGMENTATION_GUIDE.md  CLICK_VISUAL_IMPROVEMENTS.md  CODE_QUALITY_REPORT.md  COMMENT_PLAN.md  COMPLETE_FIX_REPORT.md  CONCEPTS.md  COORDINATE_DIAGNOSTIC_GUIDE.md  COORDINATE_MAPPING_FIX.md  COORDINATE_SCALE_FIX.md  DEBUG_SESSION_REPORT.md  DELIVERY_CHECKLIST.md  DRAG_DROP_FIX_REPORT.md  FINAL_CLICK_SEGMENTATION_REPORT.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FIXES_REPORT.md  FIX_SUMMARY.md  FRONTEND_PERFORMANCE_FIX.md  MANUAL_TEST_GUIDE.md  ML_CLICK_FIXES.md  ML_CLICK_FIXES_SUMMARY.md  ML_CLICK_OPTIMIZATION.md  ML_DEBUG_GUIDE.md  ML_FINAL_REPORT.md  ML_IMPLEMENTATION_STATUS.md  ML_TEST_REPORT.md  ML_USER_GUIDE.md  MOUSEMOVE_FIX.md  OPTIMIZATION_SUMMARY.md  PARAMETERS.md  PROJECT_OVERVIEW.txt  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_TEST_GUIDE.md  SCALE_FIX_TEST_GUIDE.md  SEGMENTATION_OPTIMIZATION_REPORT.md  TEST_REPORT.md  (+1 more)
OpenCV/Homework/openspec/changes/add-chinese-comments/: design.md  proposal.md  tasks.md
OpenCV/Homework/openspec/changes/comprehensive-testing-plan/: design.md  proposal.md  tasks.md
OpenCV/Homework/openspec/changes/debug-and-fix-issues/: design.md  proposal.md  tasks.md
OpenCV/Homework/openspec/changes/improve-click-segmentation/: design.md  proposal.md  tasks.md
OpenCV/Homework/openspec/changes/ml-smart-segmentation/: design.md  proposal.md  tasks.md
OpenCV/Homework/openspec/changes/performance-optimization/: SUMMARY.md  design.md  proposal.md  tasks.md
OpenCV/Homework/scripts/: batch_run.py  create_large_test_image.py  create_realistic_test.py  debug_pipeline.py  debug_step.py  diagnose_click.py  generate_training_data.py  test_model.py  train_model.py
OpenCV/Homework/static/: app.js  click_diagnostic.js  click_marker_improvements.js  click_offset_debug.js  click_visualization_debug.js  coordinate_debug.js  coordinate_diagnostic.html  coordinate_diagnostic.js  diagnose-logger.js  index.html  style.css  style.css.bak  test-logger.html
OpenCV/Homework/tests/: test_click_coordinates.py  test_env.py  test_floodfill.py  test_integration.py  test_performance.py  test_plan_b.py  test_realistic_click.py  test_segmentation_visual.py  test_smoke.py
OpenCV/Homework/tests/ml/: test_feature_extractor.py
(+332 files in other folders)
